--- a/layouts/_default/index.html
+++ b/layouts/_default/index.html
@@ -45,16 +45,14 @@
 {{- $pages = where $pages "Params.hiddenInHomeList" "!=" "true"  }}
 {{- end }}
 
-{{- $paginator := .Paginate $pages }}
-
-{{- if and .IsHome site.Params.homeInfoParams (eq $paginator.PageNumber 1) }}
+{{- if and .IsHome site.Params.homeInfoParams }}
 {{- partial "home_info.html" . }}
 {{- end }}
 
 {{- $term := .Data.Term }}
 
 {{- $.Scratch.Add "locations" slice -}}
-{{- range $index, $page := $paginator.Pages }}
+{{- range $index, $page := $pages }}
     {{- $.Scratch.Add "locations" (dict "location" (.Param "location") "content" (printf "<h4><a href='%s'>%s</a></h4>%s" .RelPermalink .Title .Content) ) -}}
 {{- end }}
 {{- partial "home_map.html" ($.Scratch.Get "locations") }}
@@ -72,29 +70,6 @@
     {{- end }}
     {{- end }}
 </ul>
-{{- end }}
-
-{{- if and (gt $paginator.TotalPages 1) (not .IsHome) }}
-<footer class="page-footer">
-  <nav class="pagination">
-    {{- if $paginator.HasPrev }}
-    <a class="prev" href="{{ $paginator.Prev.URL | absURL }}">
-      «&nbsp;{{ i18n "prev_page" }}&nbsp;
-      {{- if (.Param "ShowPageNums") }}
-      {{- sub $paginator.PageNumber 1 }}/{{ $paginator.TotalPages }}
-      {{- end }}
-    </a>
-    {{- end }}
-    {{- if $paginator.HasNext }}
-    <a class="next" href="{{ $paginator.Next.URL | absURL }}">
-      {{- i18n "next_page" }}&nbsp;
-      {{- if (.Param "ShowPageNums") }}
-      {{- add 1 $paginator.PageNumber }}/{{ $paginator.TotalPages }}
-      {{- end }}&nbsp;»
-    </a>
-    {{- end }}
-  </nav>
-</footer>
 {{- end }}
 
 {{- end }}{{/* end profileMode */}}
