--- a/layouts/partials/home_map.html
+++ b/layouts/partials/home_map.html
@@ -6,8 +6,9 @@
  * that contains the map. 
  */
 #map {
-  height: 400px;
+  height: calc(100vh - var(--header-height));
   color: black;
+  width: 60%;
 }
 
 #map a {
@@ -36,9 +37,9 @@ function mapDimensions(locations) {
     longitude_spread = Math.max(...longitudes) - Math.min(...longitudes);
     return {
         center: {lat: centerOfLine(latitudes), lng: centerOfLine(longitudes)}, 
-        zoom_level: Math.min(
+        zoom_level: Math.max(2, Math.min(
           Math.log2(300 / latitude_spread),
-          Math.log2(600 / longitude_spread))
+          Math.log2(600 / longitude_spread)))
     }
 }
 
