--- a/layouts/partials/map.html
+++ b/layouts/partials/map.html
@@ -6,8 +6,9 @@
  * that contains the map. 
  */
 #map {
-  height: 400px;
+  height: calc(100vh - var(--header-height));
   color: black;
+  width: 60%;
 }
 </style>
 
