--- a/static/post.css
+++ b/static/post.css
@@ -5,3 +5,15 @@
     /* margin: 1rem 0 */
     margin: 0;
 }
+
+.main {
+    display: flex;
+    margin: 0;
+    max-width: none;
+    padding: 0;
+}
+
+.text-stuff {
+    margin: var(--gap);
+    width: 40%;
+}
