Add partial needed for Google Analytics

--- a/layouts/partials/extend_head.html
+++ b/layouts/partials/extend_head.html
@@ -6,3 +6,4 @@
 <link rel="stylesheet" type="text/css" href="/post.css" />
 <!-- <meta name="google-maps-api" content={{ os.Getenv "HUGO_GOOGLE_MAPS_API" }}> -->
 <script>window.GOOGLE_API_KEY='{{ os.Getenv "HUGO_GOOGLE_MAPS_API" }}'</script>
+{{ template "_internal/google_analytics.html" . }}
