--- a/static/post.css
+++ b/static/post.css
@@ -8,6 +8,7 @@
 
 .main {
     display: flex;
+    flex-direction: row-reverse;
     margin: 0;
     max-width: none;
     padding: 0;
@@ -16,4 +17,36 @@
 .text-stuff {
     margin: var(--gap);
     width: 40%;
+}
+
+/* 
+* Always set the map height explicitly to define the size of the div element
+* that contains the map. 
+*/
+#map {
+    height: calc(100vh - var(--header-height) - var(--footer-height));
+    color: black;
+    width: 60%;
+}
+    
+#map a {
+    color: #1e1e1e
+}
+
+
+@media (max-width: 768px) {
+
+    .main {
+        flex-direction: column;
+    }
+
+    .text-stuff {
+        width: 100%;
+    }
+
+    #map {
+        width: 100%;
+        height: 400px;
+    }
+
 }
